--- a/action/popup/popup.html
+++ b/action/popup/popup.html
@@ -14,12 +14,12 @@
         <section class="" style="width: 400px;box-shadow: 1px 1px 3px 0 rgba(0,0,0,.2);">
             <header style="background: #f5f5f5;border-bottom: 1px solid #f0f0f0;">
                 <section style="padding: .3em;">
-                    <h2 style="margin: 0;color: #444;text-align: center;">Duolingo-Abuser</h2>
+                    <h2 style="margin: 0;color: #444;text-align: center;">Duo-abuser</h2>
                 </section>
                 <section>
                     <label>Количество игр: <input type="text" value="10"></label>
                     <div id="run-button"
-                        style="text-align: center;background: #4784f0;color: #efefef;font-size: 12px;padding: 0.4em 0.8em;border-radius: 2px;margin: .4em;cursor: pointer;">
+                        style="text-align: center;background: #5aa524;color: #efefef;font-size: 12px;padding: 0.4em 0.8em;border-radius: 2px;margin: .4em;cursor: pointer;">
                         Запустить
                     </div>
                     <!-- <button id="btn-test" >TEST</button> -->
